--- a/DiferenciaIDyClass.html
+++ b/DiferenciaIDyClass.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="DiferenciaIdCss.css" />
-    <title>Tarjeta Presentación</title>
+    <title>CSS e Id</title>
 </head>
 <body>
 <H1>Parte de invesigación</H1>
